k8s/history/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: history-app-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: history-app
  template:
    metadata:
      labels:
        app: history-app
    spec:
      containers:
        - name: history-app
          image: risver317/history-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8088
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
