k8s/history/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: history-app-service
  namespace: default
spec:
  selector:
    app: history-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8088
  type: ClusterIP
